--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@prisma/extension-accelerate": "^2.0.2",
     "bcrypt": "^6.0.0",
     "next": "15.3.5",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^4.0.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
